deploy/infrastructure/cloudformation/deployer.yml
---
AWSTemplateFormatVersion: '2010-09-09'
Description: SourceCloud 2020 - CaseMix (London) v1.0.0
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
    - Label:
        default: Cluster Nodes
      Parameters:
      - NodeInstanceType
      - ClusterNodeMin
      - ClusterNodeMax
      - ClusterNodeDesired
      - AMI
      - CostCode
      - CGEnabled
    - Label:
        default: Database
      Parameters:
      - DBInstanceClass
      - DBMasterUserPassword
      - DBStorage
      - DBStorageType
      - DBIops
      - DBMultiAZ
    - Label:
        default: Networking
      Parameters:
      - InternalSubnets
    - Label:
        default: Advanced
      Parameters:
        - namespace

    ParameterLabels:
      AMI:
        default: AMI for base server (Windows)
      CostCode:
        default: AWS Tag for billing and reporting
      CGEnabled:
        default: Cost Guardian tag to enable control of Server
      ClusterNodeMax:
        default: Maximum number of cluster nodes
      ClusterNodeMin:
        default: Minimum number of cluster nodes
      NodeInstanceType:
        default: cluster node instance type
      DBInstanceClass:
        default: Database instance class
      DBMasterUserPassword:
        default: Master password *
      DBStorage:
        default: Database storage
      DBStorageType:
        default: Database storage type
      DBIops:
        default: RDS Provisioned IOPS
      NameSpace:
        default: Namespace for tagging
Parameters:
  AnsibleInventoryId:
    Type: String
    Default: ''
  AvailabilityZone:
    Type: String
    Default: 'eu-west-1a'
  BaseSubnetA:
    Description: Base Subnet in AvailabilityZone A
    Type: String
    Default: ''
  CostCode:
    Type: String
    Default: 'Core'
  CGEnabled:
    Type: String
    Default: 'true'
    AllowedValues:
    - 'true'
    - 'false'
  DBSecurityGroup:
    Description: RDS Database Security DBSubnetGroup
    Type: String
    Default: ''
  InternalSubnets:
    Description: Subnets (two or more) where your cluster nodes and other internal
      infrastructure will be deployed. MUST be within the selected VPC. Specify the
      ExternalSubnets again here if you wish to deploy the whole stack into the same
      subnets.
    Type: List<AWS::EC2::Subnet::Id>
    Default: ""
  DatabaseSubnets:
    Description: Subnets (two or more) where your cluster nodes and other internal
      infrastructure will be deployed. MUST be within the selected VPC. Specify the
      ExternalSubnets again here if you wish to deploy the whole stack into the same
      subnets.
    Type: List<AWS::EC2::Subnet::Id>
    Default: ""
  ACMARN:
    Type: String
  AMI:
    Type: String
    Default: ''
  ELBScheme:
    Type: String
    Default: 'internal'
  ELBPort:
    Type: Number
    Default: 443
  ClusterNodeMax:
    Type: Number
    Default: '2'
  ClusterNodeMin:
    Type: Number
    Default: '1'
  ClusterNodeDesired:
    Type: Number
    Default: '1'
  InstanceType:
    Type: String
    Default: t3.small
    AllowedValues:
    - t2.nano
    - t2.micro
    - t2.small
    - t2.medium
    - t2.large
    - t3.small
    - t3.medium
    - t3.large
    - c5.large
    - c5.xlarge
    - c5.2xlarge
    - m5.large
    - m5.2xlarge
    - m5.4xlarge
    - r4.large
    - r3.xlarge
    - r4.2xlarge
    ConstraintDescription: Must be an EC2 instance type in the T2, C5, R4, or M5 family,
      'xlarge' or larger
    Description: Instance type for the cluster nodes.
  DBInstanceClass:
    Description: RDS instance type supported by SQL Server Web Edition
    Type: String
    Default: db.t2.small
    AllowedValues:
    - db.m4.large
    - db.m4.xlarge
    - db.m4.2xlarge
    - db.m4.4xlarge
    - db.r4.large
    - db.r4.xlarge
    - db.r4.2xlarge
    - db.t2.large
    - db.t2.medium
    - db.t2.small
    ConstraintDescription: Must be a valid RDS instance class, 'db.t2.medium' or larger.
  DBEncrypt:
    Type: String
    Description: Database Encryption true / false, needs to be false for mssql express.
  DBUser:
    Type: String
    Description: Database User account.
  DBMasterUserPassword:
    NoEcho: 'true'
    Default: ''
    Description: Database admin account password.
    Type: String
    MaxLength: '41'
    AllowedPattern: "[a-zA-Z0-9]*"
    ConstraintDescription: Must be at least 8 alphanumeric characters.
  BackupRetention:
    Type: Number
    Default: 2
    Description: Days to retain snapshot backups of Database
  DBRestore:
    Type: String
    Description: Boolean value, set to true to restore database.
    Default: false
    AllowedValues:
    - 'true'
    - 'false'
  DBSnapshot:
    Type: String
    Description: Name of snapshot to be restored.
  DBEngine:
    Description: Database Engine eg mysql, postres, sqlserver-web 
    Type: String
  DBEngineShort:
    Description: Database Engine short name, needed for MSSQL 
    Type: String
  DBEngineVersion:
    Description: Version of Database Engine
    Type: String
  DBParameterGroupFamilyVer:
    Description: RDS DB Parameter Group
    Type: String
  DBStorage:
    Description: Database allocated storage size, in gigabytes (GB)
    Type: Number
    Default: '20'
  DBStorageType:
    Description: Database storage type
    Type: String
    Default: General Purpose (SSD)
    AllowedValues:
    - General Purpose (SSD)
    - Provisioned IOPS
    ConstraintDescription: Must be 'General Purpose (SSD)' or 'Provisioned IOPS'.
  DBMultiAZ:
    Type: String
    Default: 'false'
    AllowedValues:
    - 'true'
    - 'false'
    ConstraintDescription: Must be 'true' or 'false'.
  DBIops:
    Description: 'Must be in the range of 1000 - 30000 and a multiple of 1000. This
      value is only used with Provisioned IOPS. Note: The ratio of IOPS per allocated-storage
      must be between 3.00 and 10.00.'
    Type: Number
    Default: '1000'
    MinValue: '1000'
    MaxValue: '30000'
    ConstraintDescription: Must be in the range 1000 - 30000.
  EnvName:
    Description: Environment Name
    Type: String
    Default: prod
  HostedZoneName:
    Description: Route53 DNS Hosted Zone Name
    Type: String
    Default: 'sc-core-services.internal.'
  NameSpace:
    Description: Enter the Domain Name Space, used for labeling assets.
    Type: String
    Default: default.aws
  SCVpnCIDR:
    Description: SourceCloud VPN CIDR range
    Type: String
  AnsibleWorkerCIDR:
    Description: AnsibleWorker (sc-core-services) CIDR range
    Type: String
  SCCIDR:
    Description: SourceCloud IP Address
    Type: String
    Default: 62.31.86.227/32
  WebServerPort:
    Description: Server port, used for configuring Security Groups
    Type: String
  DBPort:
    Description: Database port, used for configuring Security Groups
    Type: String
  VPC:
    Description: VPC indentifer
    Type: String
  DefaultTTL:
    Description: Default TTL time for CloudFront 
    Type: Number
  MaxTTL:
    Description: Maximum TTL time for CloudFront (should be used in conjunction with cache-control max-age in headers)
    Type: Number
  MinTTL:
    Description: Minimum TTL time for CloudFront (should be used in conjunction with cache-control max-age in headers)
    Type: Number

Conditions:
  DBProvisionedIops:
    Fn::Equals:
    - Ref: DBStorageType
    - Provisioned IOPS
  DoSetDBMasterUserPassword:
    Fn::Not:
    - Fn::Equals:
      - Ref: DBMasterUserPassword
      - ''
  DBRestoreRequest:
    Fn::Equals:
      - Ref: DBRestore
      - 'true'
  DBMSSQLEngine:   # Is engine MSSQL
    Fn::Equals:
      - Ref: DBEngineShort
      - 'mssql'
  DBMySQLEngine:   # Is engine MySQL
    Fn::Equals:
      - Ref: DBEngineShort
      - 'mysql'
  IsNotProd:
    Fn::Not:
      - Fn::Equals:
        - Ref: EnvName
        - 'prod'
  IsProd:
    Fn::Equals:
      - Ref: EnvName
      - 'prod'

Resources:
  SGSC:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: 
        Ref: VPC
      GroupName: !Sub
      - ${NameSpace}.sc.sg
      - { NameSpace: !Ref NameSpace }
      GroupDescription: 'SourceCloud Office'
      SecurityGroupIngress:
        - IpProtocol: tcp
          CidrIp: 
            Ref: SCCIDR
          FromPort: '443'
          ToPort: '443'
          Description: 'HTTPS - Direct from Bingham SourceCloud Office'
        - IpProtocol: tcp
          CidrIp: 
            Ref: SCCIDR
          FromPort: '80'
          ToPort: '80'
          Description: 'HTTP - Direct from Bingham SourceCloud Office'
        - IpProtocol: tcp
          CidrIp: 
            Ref: SCCIDR
          FromPort: '22'
          ToPort: '22'
          Description: 'SSH - Direct from Bingham SourceCloud Office'
        - IpProtocol: tcp
          CidrIp: 
            Ref: SCCIDR
          FromPort: '3389'
          ToPort: '3389'
          Description: 'RDP - Direct from Bingham SourceCloud Office'
      
  SGVPN:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: 
        Ref: VPC
      GroupName: !Sub
      - ${NameSpace}.vpn.sg
      - { NameSpace: !Ref NameSpace }
      GroupDescription: !Sub
        ${AWS::StackName} SourceCoud VPN Security Group
      SecurityGroupIngress:
        - IpProtocol: tcp
          CidrIp: 
            Ref: SCVpnCIDR
          FromPort:
            Ref: ELBPort
          ToPort:
            Ref: ELBPort
          Description: 'HTTPS - from SourceCloud VPN'
        - IpProtocol: tcp
          CidrIp: 
            Ref: SCVpnCIDR
          FromPort:
            Ref: WebServerPort
          ToPort:
            Ref: WebServerPort
          Description: 'HTTP - from SourceCloud VPN'         
        - IpProtocol: tcp
          CidrIp: 
            Ref: SCVpnCIDR
          FromPort: '22'
          ToPort: '22'
          Description: 'SSH - from SourceCloud VPN'
        - IpProtocol: tcp
          CidrIp: 
            Ref: SCVpnCIDR
          FromPort: '3389'
          ToPort: '3389'
          Description: 'RDP - from SourceCloud VPN'         
        - IpProtocol: tcp
          CidrIp: 
            Ref: SCVpnCIDR
          FromPort: '1433'
          ToPort: '1433'
          Description: 'MSSQL - from SourceCloud VPN'
        - IpProtocol: tcp
          CidrIp: 
            Ref: SCVpnCIDR
          FromPort: '3306'
          ToPort: '3306'
          Description: 'MYSQL - from SourceCloud VPN'         
        - IpProtocol: icmp
          CidrIp: 
            Ref: SCVpnCIDR
          FromPort: '-1'
          ToPort: '-1'
          Description: 'ICMP - from SourceCloud VPN'   
        - IpProtocol: tcp
          CidrIp: 
            Ref: SCVpnCIDR
          FromPort: '5986'
          ToPort: '5986'
          Description: 'WinRM (Ansible) - from SourceCloud VPN'      
  SGELB:
    Type: 'AWS::EC2::SecurityGroup'
    DependsOn: SGVPN
    Properties:
      VpcId: 
        Ref: VPC
      GroupName: !Sub
      - ${NameSpace}.elb.sg
      - { NameSpace: !Ref NameSpace }
      GroupDescription: !Sub
        ${AWS::StackName} ELB Security Group
      SecurityGroupIngress:
        - IpProtocol: tcp
          CidrIp:
            Ref: SCVpnCIDR
          FromPort:
            Ref: ELBPort
          ToPort:
            Ref: ELBPort
          Description: 'HTTPS - from SourceCloud VPN'
        - IpProtocol: tcp
          CidrIp:
            Ref: SCVpnCIDR
          FromPort:
            Ref: WebServerPort
          ToPort:
            Ref: WebServerPort
          Description: 'HTTP - from SourceCloud VPN (redirects to https)'

  SGWeb:
    Type: 'AWS::EC2::SecurityGroup'
    DependsOn:
      - SGELB
    Properties:
      VpcId: 
        Ref: VPC
      GroupName: !Sub
      - ${NameSpace}.web.sg
      - { NameSpace: !Ref NameSpace }
      GroupDescription: !Sub
        ${AWS::StackName} Web Security Group
      SecurityGroupIngress:
        - IpProtocol: tcp
          CidrIp: 10.115.0.0/16
          FromPort:
            Ref: WebServerPort
          ToPort:
            Ref: WebServerPort
          Description: 'General access direct to web server from within AWS Account'
        - IpProtocol: tcp
          SourceSecurityGroupId: 
            Ref: SGELB
          FromPort:
            Ref: WebServerPort
          ToPort:
            Ref: WebServerPort
          Description: 'HTTP access from Load Balancer'
        - IpProtocol: tcp
          SourceSecurityGroupId:
            Ref: SGSC # SourceCloud Office
          FromPort:
            Ref: WebServerPort
          ToPort:
            Ref: WebServerPort
          Description: 'Direct HTTP Web Access to Web Port from SourceCloud Office'
        - IpProtocol: tcp
          CidrIp:
            Ref: AnsibleWorkerCIDR
          FromPort: '5986'
          ToPort: '5986'
          Description: 'Access to WebServer from AnsibleWorker in sc-core-services'

  SGDB:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: 
        Ref: VPC
      GroupName: !Sub
      - ${NameSpace}.db.sg
      - { NameSpace: !Ref NameSpace }
      GroupDescription: !Sub
        ${AWS::StackName} Database Security Group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort:
            Ref: DBPort
          ToPort:
            Ref: DBPort
          SourceSecurityGroupId:
            Ref: SGWeb
          Description: 'Access from Web Server Security Group'
        - IpProtocol: tcp
          SourceSecurityGroupId:
            Ref: SGVPN
          FromPort:
            Ref: DBPort
          ToPort:
            Ref: DBPort
          Description: 'Access to Database from VPN'
        - IpProtocol: tcp
          CidrIp:
            Ref: AnsibleWorkerCIDR
          FromPort:
            Ref: DBPort
          ToPort:
            Ref: DBPort
          Description: 'Access to Database from AnsibleWorker in sc-core-services'
      
  SGMemCached:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: 
        Ref: VPC
      GroupName: !Sub
      - ${NameSpace}.memcached.sg
      - { NameSpace: !Ref NameSpace }
      GroupDescription: !Sub
        ${AWS::StackName} Memcached Security Group
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 11211
          ToPort: 11211
          SourceSecurityGroupId:
            Ref: SGWeb
          Description: 'Access from Web Server Security Group'
        - IpProtocol: tcp
          SourceSecurityGroupId:
            Ref: SGVPN
          FromPort: 11211
          ToPort: 11211
          Description: 'Access to Memcached from VPN'

  RDSMySQLDBParameterGroup:
    Type: AWS::RDS::DBParameterGroup
    Condition: DBMySQLEngine
    Properties:
      Description: SourceCloud MYSQL Database Parameter Group
      Family: !Sub
        - ${DBEng}${DBVer}
        - { DBEng: !Ref DBEngine, DBVer: !Ref DBParameterGroupFamilyVer }
      Parameters:
        log_bin_trust_function_creators: "1"
        lower_case_table_names: "1"

  DB:
    Type: AWS::RDS::DBInstance
    Properties:
      AllocatedStorage:
        Ref: DBStorage
      AllowMajorVersionUpgrade: false
      AutoMinorVersionUpgrade: true
      BackupRetentionPeriod:
        Ref: BackupRetention
      CopyTagsToSnapshot: true
      PreferredBackupWindow: 01:30-02:00
      DBInstanceClass:
        Ref: DBInstanceClass
      DBParameterGroupName: # If not MSSQL assume MySQL
        Ref: RDSMySQLDBParameterGroup
      DBSnapshotIdentifier:
        Fn::If:
        - DBRestoreRequest
        - Ref: DBSnapshot
        - Ref: AWS::NoValue
      DBSubnetGroupName:
        Ref: DBSubnetGroup
      Engine:
        Ref: DBEngine
      EngineVersion: 
        Ref: DBEngineVersion
      MasterUsername:
        Ref: DBUser
      MasterUserPassword:
        Fn::If:
        - DoSetDBMasterUserPassword
        - Ref: DBMasterUserPassword
        - Ref: AWS::NoValue
      StorageType:
        Fn::If:
        - DBProvisionedIops
        - io1
        - gp2
      StorageEncrypted:
        Ref: DBEncrypt
      Iops:
        Fn::If:
        - DBProvisionedIops
        - Ref: DBIops
        - Ref: AWS::NoValue
      MultiAZ:
        Ref: DBMultiAZ
      VPCSecurityGroups:
      - Ref: SGDB
      - Ref: SGVPN
      Tags:
      - Key: Name
        Value: !Sub
          - ${NameSpace}.rds
          - { NameSpace: !Ref NameSpace }

  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: DBSubnetGroup
      SubnetIds:
        Ref: DatabaseSubnets

  CacheSubnetGroup:
    Type: 'AWS::ElastiCache::SubnetGroup'
    Properties:
      Description: Memcached Subnet Group
      SubnetIds:
        Ref: InternalSubnets

  myCacheCluster:
    Type: 'AWS::ElastiCache::CacheCluster'
    Properties:
      AZMode: single-az
      CacheNodeType: cache.t2.micro
      CacheSubnetGroupName:
        Ref: CacheSubnetGroup
      Engine: memcached
      NumCacheNodes: '1'
      PreferredAvailabilityZone:
        Ref: AvailabilityZone
      VpcSecurityGroupIds:
      - Ref: SGMemCached

  AngularAdminS3Bucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName:
        Fn::Join:
        - ''
        - - Fn::Sub: 
            - "admin-${Environment}."
            - { Environment: !Ref EnvName}
          - Ref: HostedZoneName
      AccessControl: Private
      Tags:
      - Key: Environment
        Value: !Sub "${EnvName}"
      - Key: Cost Code
        Value: !Sub "${CostCode}"

  AngularAdminBucketPolicy: 
    Type: AWS::S3::BucketPolicy
    Properties: 
      Bucket: 
        Ref: AngularAdminS3Bucket
      PolicyDocument: 
        Statement: 
          - 
            Action: 
              - "s3:GetObject"
            Effect: "Allow"
            Resource: 
              Fn::Join: 
                - ""
                - 
                  - "arn:aws:s3:::"
                  - 
                    Ref: AngularAdminS3Bucket
                  - "/*"
            Principal: "*"

  DNSAdminRecord:
    Type: AWS::Route53::RecordSet
    Condition: IsNotProd
    Properties:
      HostedZoneName:
        Fn::Sub: 
        - "${HostedZone}."
        - { HostedZone: !Ref HostedZoneName}
      Name:
        Fn::Join:
        - ''
        - - Fn::Sub: 
            - "admin-${Environment}."
            - { Environment: !Ref EnvName}
          - Ref: HostedZoneName
      ResourceRecords:
      - Fn::GetAtt: adminCDN.DomainName
      TTL: '300'
      Type: CNAME

  DNSProdAdminRecord:
    Type: AWS::Route53::RecordSet
    Condition: IsProd
    Properties:
      HostedZoneName:
        Fn::Sub: 
        - "${HostedZone}."
        - { HostedZone: !Ref HostedZoneName}
      Name:
        Fn::Join:
        - ''
        - - "admin."
          - Ref: HostedZoneName
      ResourceRecords:
      - Fn::GetAtt: adminProdCDN.DomainName
      TTL: '300'
      Type: CNAME

  adminCDN:
    Type: AWS::CloudFront::Distribution
    Condition: IsNotProd
    Properties:
      Tags:
        - Key: Environment
          Value: !Sub "${EnvName}"
        - Key: Cost Code
          Value: !Sub "${CostCode}"    
      DistributionConfig:
        Origins:
        - DomainName: 
            Fn::GetAtt: AngularAdminS3Bucket.DomainName
          Id:
            Ref: AngularAdminS3Bucket
          S3OriginConfig:
            OriginAccessIdentity: ''
        Enabled: 'true'
        Comment: Admin site
        DefaultRootObject: index.html
        CustomErrorResponses:
        - ErrorCode: '403'
          ResponsePagePath: "/index.html"
          ResponseCode: '200'
          ErrorCachingMinTTL: '300'
        - ErrorCode: '404'
          ResponsePagePath: "/index.html"
          ResponseCode: '200'
          ErrorCachingMinTTL: '300'
        Aliases:
        - Fn::Join:
          - ''
          - - Fn::Sub: 
              - "admin-${Environment}."
              - { Environment: !Ref EnvName}
            - Ref: HostedZoneName
        DefaultCacheBehavior:
          DefaultTTL:
            Ref: DefaultTTL
          MaxTTL:
            Ref: MaxTTL
          AllowedMethods:
          - GET
          - HEAD
          TargetOriginId:
            Ref: AngularAdminS3Bucket
          ForwardedValues:
            QueryString: 'false'
            Cookies:
              Forward: none
          ViewerProtocolPolicy: redirect-to-https
        PriceClass: PriceClass_100
        ViewerCertificate:
          AcmCertificateArn:
            Ref: ACMARN
          MinimumProtocolVersion: TLSv1.1_2016
          SslSupportMethod: sni-only

  adminProdCDN:
    Type: AWS::CloudFront::Distribution
    Condition: IsProd
    Properties:
      Tags:
        - Key: Environment
          Value: !Sub "${EnvName}"
        - Key: Cost Code
          Value: !Sub "${CostCode}"    
      DistributionConfig:
        Origins:
        - DomainName: 
            Fn::GetAtt: AngularAdminS3Bucket.DomainName
          Id:
            Ref: AngularAdminS3Bucket
          S3OriginConfig:
            OriginAccessIdentity: ''
        Enabled: 'true'
        Comment: Admin site
        DefaultRootObject: index.html
        CustomErrorResponses:
        - ErrorCode: '403'
          ResponsePagePath: "/index.html"
          ResponseCode: '200'
          ErrorCachingMinTTL: '300'
        - ErrorCode: '404'
          ResponsePagePath: "/index.html"
          ResponseCode: '200'
          ErrorCachingMinTTL: '300'
        Aliases:
        - Fn::Join:
          - ''
          - - Fn::Sub: 
              - "admin."
              - { Environment: !Ref EnvName}
            - Ref: HostedZoneName
        DefaultCacheBehavior:
          DefaultTTL:
            Ref: DefaultTTL
          MaxTTL:
            Ref: MaxTTL
          AllowedMethods:
          - GET
          - HEAD
          TargetOriginId:
            Ref: AngularAdminS3Bucket
          ForwardedValues:
            QueryString: 'false'
            Cookies:
              Forward: none
          ViewerProtocolPolicy: redirect-to-https
        PriceClass: PriceClass_100
        ViewerCertificate:
          AcmCertificateArn:
            Ref: ACMARN
          MinimumProtocolVersion: TLSv1.1_2016
          SslSupportMethod: sni-only

Outputs:
  RDSId:
    Description: RDS ID
    Value: !Ref DB
    Export:
      Name:
        Fn::Sub: "${AWS::StackName}-RDSId"
  RDSEndId:
    Description: RDS Endpoint for DB Connections
    Value: !GetAtt DB.Endpoint.Address
    Export:
      Name:
        Fn::Sub: "${AWS::StackName}-RDSEndId"
  SGWebId:
    Description: Security GroupId for Web / Lambda
    Value: !Ref SGWeb
    Export:
      Name:
        Fn::Sub: "${AWS::StackName}-SGWebId"
  MemcachedEndpointAddr:
    Description: ElastiCache Memcached Configuration Address
    Value: !GetAtt myCacheCluster.ConfigurationEndpoint.Address
    Export:
      Name:
        Fn::Sub: "${AWS::StackName}-MemcachedEndpointAddr"
  MemcachedEndpointPort:
    Description: ElastiCache Memcached Endpoint Port
    Value: !GetAtt myCacheCluster.ConfigurationEndpoint.Port
    Export:
      Name:
        Fn::Sub: "${AWS::StackName}-MemcachedEndpointPort"
